--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   provider:
   dio:
   fluttertoast:
+  shared_preferences: 
+  firebase_auth: 
+  firebase_core: 
+  google_sign_in:
 
 dev_dependencies:
   flutter_test:
