--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   dio:
   fluttertoast:
   shared_preferences: 
-  firebase_auth: 
-  firebase_core: 
-  google_sign_in:
+  speech_to_text: 
+  # firebase_auth: 
+  # firebase_core: 
+  # google_sign_in:
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    # - assets/sounds/speech_to_text_listening.m4r
+    # - assets/sounds/speech_to_text_cancel.m4r
+    # - assets/sounds/speech_to_text_stop.m4r
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
