--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "name": "task_app",
             "request": "launch",
             "type": "dart",
+            // "args": ["--no-sound-null-safety"],
             "program": "lib/main.dart",
         },
         {
